# vimgcov

./: .gitignore  CMakeLists.txt  README.md  a.py
.github/workflows/: build_and_test.yml
autoload/: vimgcov.vim
plugin/: vimgcov.vim
python/: vimgcov.py
src/: gcov_json_handler.cpp  gcov_json_handler.hpp  vimgcov.cpp  vimgcov.hpp
tests/: CMakeLists.txt  test_gcov_json_parser.cpp  test_vimgcov.cpp  test_vimgcov.py  test_vimgcov_module.py
